fix layout bugs

--- a/statics/styles/styles.css
+++ b/statics/styles/styles.css
@@ -158,6 +158,7 @@ html {
   color: var(--white-1);
 
   text-decoration: none;
+  white-space: nowrap;
 }
 
 .header-contacts-phone-small {
